--- a/_pages/podcast-episodes/ep-018.md
+++ b/_pages/podcast-episodes/ep-018.md
@@ -7,6 +7,7 @@ label: "I sat down with Jennifer Griffin and Brian Holohan of Turn2me E-Mental H
 date: Thu, 24 Jan 2019 04:07:54 GMT
 duration: "45:32"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/018-Turn2me.mp3
+image: /images/guests/turn2me.png
 show: false
 ---
 
