022-lewis-denham-parry

--- a/_pages/podcast-episodes/ep-021.md
+++ b/_pages/podcast-episodes/ep-021.md
@@ -1,13 +1,13 @@
 ---
 layout: podcast
-permalink: /podcast/episode/021
-title: "Guest Joe Morgan"
-subtitle: "I am joined by Joe Morgan a UI Developer, Speaker, Author, JavaScript enthusiast"
-label: "Joe Morgan is Founder and CoOrganizer of the Kansas City React Meetup, a UI developer, and the author of 'Simplifying JavaScript' https://pragprog.com/book/es6tips/simplifying-javascript | https://slate.com/human-interest/2018/12/against-teaching-kids-to-code-creativity-problem-solving.html | https://ponyfoo.com/ | https://twitter.com/joesmorgan | https://www.linkedin.com/in/joe-morgan-42458a15/ "
-date: Mon, 11 Mar 2019 04:20:54 GMT
-duration: "48:14"
-source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/021-joe-morgan.mp3
-image: /images/guests/joe-morgan.jpg
+permalink: /podcast/episode/022
+title: "Guest Lewis Denham-Parry"
+subtitle: "Lewis Denham-Parry Co-founder of Cloud Native Wales joins me to talk about mental health in technology"
+label: "Find out the parallels of mental health to monoliths versus microservices! You can find Lewis here: https://twitter.com/denhamparry | https://denhamparry.co.uk/ | https://www.linkedin.com/in/denhamparry/"
+date: Tue, 12 Mar 2019 04:20:54 GMT
+duration: "54:48"
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/022-lewis-denham-parry.mp3
+image: /images/guests/lewis-denham-parry.jpg
 show: false
 ---
 
