--- a/_pages/podcast-episodes/ep-033.md
+++ b/_pages/podcast-episodes/ep-033.md
@@ -1,7 +1,7 @@
 ---
 layout: podcast
 permalink: /podcast/episode/033
-title: "Diversity and Inclusion Manifesto ~ It's like the Agile Manifesto, but for humans."
+title: "Diversity and Inclusion Manifesto - It's like the Agile Manifesto, but for humans."
 subtitle: "Guest Tom Shaw discussing the Diversity and Inclusion Manifesto"
 label: "Tom is helping move the video game industry towards more diversity with the Diversity and Inclusion Manifesto | https://diversitymanifesto.org | https://twitter.com/tomwillfixit | https://www.linkedin.com/in/tomwillfixit/ "
 date: Tue, 15 Jul 2019 04:20:54 GMT
